--- a/Obasco.html
+++ b/Obasco.html
@@ -1,63 +1,66 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Obasco</title>
-    <link rel="stylesheet" href="Obasco.css">
-  </head>
-  <body>
-    <main>
-      <section class="box">
-        <nav class="main-nav">
-          <div class="logo">
-            <a href="Obasco.html">Obasco</a>
-          </div>
-          <ul>
-            <li class="nav-item"> <a href="#">About Us</a></li>
-            <li class="nav-item"><a href="#">Contact Us</a> </li>
-          </ul>
-        </nav>
-        <div class="container">
-          <h1>Come and Explore the World with us!</h1>
-          <p>We not only offer services and products you might need, at Obasco Enterprises, we also provide the platform for you to meet others that share similar interests </p>
-          <button class="Learn"> Learn More</button>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Obasco</title>
+  <link rel="stylesheet" href="Obasco.css">
+</head>
+<body>
+  <main>
+    <section class="box">
+      <nav class="main-nav">
+        <div class="logo">
+          <a href="Obasco.html">Obasco</a>
         </div>
-      </section>
+        <ul>
+          <li class="nav-item"> <a href="#">About Us</a></li>
+          <li class="nav-item"><a href="#">Contact Us</a> </li>
+        </ul>
+      </nav>
+      <div class="container">
+        <h1>Come and Explore the World with us!</h1>
+        <p>We not only offer services and products you might need, at Obasco Enterprises, we also provide the platform for you to meet others that share similar interests </p>
+        <button class="Learn"> Learn More</button>
+      </div>
+    </section>
 
-      <section class="about-section">
-        <div class="about-content">
-          <h1>At Obasco Enterprises we want to achieve Satisfaction and Connectivity</h1>
-          <p>"Did you just get that awesome game and you want to discuss how great it is?" At Obasco there's an open community just for you</p>
+    <section class="about-section">
+      <div class="about-content">
+        <h1>At Obasco Enterprises we want to achieve Satisfaction and Connectivity</h1>
+        <p>"Did you just get that awesome game and you want to discuss how great it is?" At Obasco there's an open community just for you</p>
+      </div>
+      <div class="about-img">
+        <div class="image-box">
+          <img src="about-img.jpg" alt="Image not available">
         </div>
-        <div class="about-img">
-          <div class="image-box">
-            <img src="about-img.jpg" alt="Image not available">
-          </div>
-        </div>
-      </section>
+      </div>
+    </section>
 
-      <section class="contact-section">
-        <h3 class="form-header">Contact Us</h3>
-        <div class="form-box">
-          <form class="" action="index.html" method="post">
-            <label for="name">Name:</label>
-            <input type="text" placeholder="Enter your name" name="name" id="name" required>
+    <section class="contact-section">
+      <h3 class="form-header">Contact Us</h3>
+      <div class="form-box">
+        <form class="" action="index.html" method="post">
+          <label for="name">Name:</label>
+          <input type="text" placeholder="Enter your name" name="name" id="name" required>
 
-            <label for="mail">Email:</label>
-            <input type="email" placeholder="Enter your email" name="mail" id="mail" required>
+          <label for="mail">Email:</label>
+          <input type="email" placeholder="Enter your email" name="mail" id="mail" required>
 
-            <label for="textarea">Request:</label>
-            <textarea name="textarea" placeholder="How can we help you?" rows="8" cols="40" id="textarea" required></textarea>
-            <button type="submit" name="button">Submit</button>
-          </form>
-        </div>
-      </section>
-    </main>
+          <label for="textarea">Request:</label>
+          <textarea name="textarea" placeholder="How can we help you?" rows="8" cols="40" id="textarea" required></textarea>
+          <button type="submit" name="button">Submit</button>
+        </form>
+      </div>
+    </section>
+  </main>
 
-    <footer>
-      <p>Obasco</p>
-      <p>Copyright &copy;2021</p>
+  <footer>
+    <p>Obasco</p>
+    <p>Copyright &copy;2021</p>
 
-    </footer>
-  </body>
+  </footer>
+</body>
 </html>
+
