--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <ul>
           <li class="nav-item"> <a href="#">About Us</a></li>
-          <li class="nav-item"><a href="#">Contact Us</a> </li>
+          <li class="nav-item"><a href="contact.html">Contact Us</a> </li>
         </ul>
       </nav>
       <div class="container">
