--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="contactmain.css">
 </head>
 <body>
-    <main>
+    <main class="contact-main">
         <nav class="main-nav">
             <div class="logo">
-              <a href="Obasco.html">Obasco</a>
+              <a href="index.html">Obasco</a>
             </div>
             <ul>
-              <li class="nav-item"> <a href="contact.html">About Us</a></li>
-              <li class="nav-item"><a href="#">Contact Us</a> </li>
+              <li class="nav-item"> <a href="about.html">About Us</a></li>
+              <li class="nav-item"><a href="contact.html">Contact Us</a> </li>
             </ul>
           </nav>
         <section class="contact-section">
