--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <section class="box">
       <nav class="main-nav">
         <div class="logo">
-          <a href="Obasco.html">Obasco</a>
+          <a href="index.html">Obasco</a>
         </div>
         <ul>
-          <li class="nav-item"> <a href="#">About Us</a></li>
+          <li class="nav-item"> <a href="about.html">About Us</a></li>
           <li class="nav-item"><a href="contact.html">Contact Us</a> </li>
         </ul>
       </nav>
